fix colors / app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Abasteça+",
-  "short_name": "Abasteça+",
+  "name": "abasteci",
+  "short_name": "abasteci",
   "description": "Combustível no melhor preço",
   "start_url": "/",
   "display": "standalone",
